--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,32 @@
 <html>
 <head>
-  <title>Comments</title>
+  <title>Conference Reading List</title>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
   <script src="javascripts/app.js"></script>
 
 </head>
-<body ng-app="comment" ng-controller="MainCtrl">
+<body ng-app="conference" ng-controller="MainCtrl">
 <div class="row">
 <div class="col-md-6 col-md-offset-3">
 <div class="page-header"> 
-  <h1>Comments </h1>
+  <h1>Conference Reading List</h1>
 </div>
 
-  <form ng-submit="addComment()" style = "margin-top30px;">
-    <input type="text" ng-model="formContent"></input>
-    <button type="submit">Add Comment</button>
+  <form ng-submit="addTalk()" style = "margin-top30px;">
+    <input type="text" ng-model="year" placeholder="Year">
+    <input type="text" ng-model="month" placeholder="Month (Apr/Oct)">
+    <input type="text" ng-model="imageUrl" placeholder="Image Url">
+    <input type="text" ng-model="speaker" placeholder="Speaker">
+    <input type="text" ng-model="title" placeholder="Title">
+    <button type="submit">Add Talk</button>
   </form>
-  <div>
-    {{test}}
-  </div>
-<div ng-repeat="comment in comments | orderBy: '-upvotes'">
-    <span class="glyphicon glyphicon-remove" ng-click="delete(comment)"></span>
-    <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(comment)"></span>
-    {{comment.title}} - upvotes: {{comment.upvotes}}
+
+<div ng-repeat="talk in talks | orderBy: ['-upvotes','year','month']">
+    <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(talk)"></span>
+    <img src="talk.imageUrl"/>
+  {{Speaker}}& bull;{{<em>talk.title</em>}} ({{talk.month}} {{talk.year}}) - upvotes: {{talk.upvotes}}
+    <span class="glyphicon glyphicon-remove" ng-click="delete(talk)"></span>
   </div>
 </div>
 </div>
